keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-external-config
spec:
  tls:
    - hosts:
        - my-keycloak.com
      secretName: my-tls
  rules:
    - host: my-keycloak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 443
